# Water-Treat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTROLLER_SPEC.md  Doxyfile  INSTALL.md  LICENSE  Makefile  OPERATOR.md  README.md  REVIEW.md  SOURCES.md  TECH_DEBT_AUDIT.md
.github/workflows/: build-release.yml  build.yml  ci.yml  docs.yml  release.yml
cloud-init/: README.md  cmdline.txt.example  firstrun.sh  meta-data  sysconf.txt  user-data  water-treat-firstrun.service
docs/: CLEANUP_AND_ROADMAP.md  COMPLIANCE_REPORT.md  CONTROLLER_INTEGRATION_NOTES.md  CROSS_REFERENCE_MATRIX.md  CROSS_SYSTEM_GUIDELINES_ADDENDUM.md  DEVELOPMENT_GUIDELINES.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_RESTRUCTURING_PLAN.md  INTEGRATION_GAP_ANALYSIS.md  IO_CONFIGURATION_UI_SPEC.md  LOGGER_ARCHITECTURE.md  PROFINET_DATA_FORMAT_SPECIFICATION.md  SCADA_STATUS_ASSESSMENT.md
docs/decisions/: DR-001-port-allocation.md
docs/versioned/v1.0/: ALARM_RESPONSE.md  COMMISSIONING.md  SAFETY_INTERLOCKS.md
etc/: profinet-monitor.conf.example  water-treat.conf.example  water-treat.env
firmware/rp2040_led_controller/: CMakeLists.txt  main.c  ws2812.pio
gsd/: GSDML-V2.4-WaterTreat-RTU-20241216.xml  GSDML-V2.4-WaterTreat-RTU-20241222.xml
include/: common.h  config_defaults.h
scripts/: 99-profinet-monitor.rules  99-water-treat.rules  bootstrap.sh  build.sh  env.sh  install-deps.sh  install.sh  setup-profinet-network.sh  uninstall.sh  verify-port-config.sh
src/: main.c
src/actuators/: actuator_manager.c  actuator_manager.h
src/alarms/: alarm_manager.c  alarm_manager.h
src/auth/: auth.c  auth.h
src/config/: config.c  config.h  config_resolver.c  config_resolver.h  config_validate.c  config_validate.h
src/db/: database.c  database.h  db_actuators.c  db_actuators.h  db_alarms.c  db_alarms.h  db_events.c  db_events.h  db_modules.c  db_modules.h
src/drivers/adc/: adc_driver.h
src/drivers/bus/: gpio_hal.c  gpio_hal.h  i2c_hal.h
src/drivers/digital/: relay_output.c  relay_output.h
src/hal/: led_backend_rp2040.c  led_backend_rpi.c  led_backend_spi.c  led_status.c  led_status.h  led_ws2812.c  led_ws2812.h
src/health/: health_check.c  health_check.h
src/logging/: data_logger.c  data_logger.h
src/platform/: board_detect.c  board_detect.h  hw_discover.c  hw_discover.h
src/profinet/: profinet_callbacks.c  profinet_callbacks.h  profinet_manager.c  profinet_manager.h
src/sensors/: formula_evaluator.c  formula_evaluator.h  sensor_api.h  sensor_instance.c  sensor_instance.h  sensor_manager.c  sensor_manager.h
src/sensors/analog/: analog_sensor.c  analog_sensor.h
src/sensors/drivers/: driver_ads1115.c  driver_ads1115.h  driver_bme280.c  driver_dht22.c  driver_dht22.h  driver_ds18b20.c  driver_ds18b20.h  driver_float_switch.c  driver_float_switch.h  driver_hx711.c  driver_jsn_sr04t.c  driver_jsn_sr04t.h  driver_mcp3008.c  driver_mcp3008.h  driver_ph.c  driver_pump.c  driver_pump.h  driver_solenoid.c  driver_solenoid.h  driver_tcs34725.c  driver_tcs34725.h  driver_tds.c  driver_turbidity.c  driver_web_poll.c  driver_web_poll.h
src/sensors/hardware/: hw_interface.c  hw_interface.h
src/tui/: tui_common.c  tui_common.h  tui_main.c  tui_main.h
src/tui/dialogs/: dialog_actuator.c  dialog_actuator.h  dialog_alarm.c  dialog_alarm.h  dialog_helpers.c  dialog_helpers.h  dialog_io_wizard.c  dialog_io_wizard.h  dialog_sensor.c  dialog_sensor.h
src/tui/pages/: page_actuators.c  page_actuators.h  page_alarms.c  page_alarms.h  page_logging.c  page_logging.h  page_login.c  page_login.h  page_modbus.c  page_modbus.h  page_network.c  page_network.h  page_profinet.c  page_profinet.h  page_sensors.c  page_sensors.h  page_status.c  page_status.h  page_system.c  page_system.h  page_wizard.c  page_wizard.h
src/tui/widgets/: widget_dialog.c  widget_dialog.h
src/utils/: logger.c  logger.h
systemd/: profinet-monitor.service  water-treat.service
tests/: test_alarms.c  test_calibration.c  test_config.c  test_formula.c  test_framework.h  test_main.c  test_profinet_data.c
toolchain/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  armv6-linux-gnueabihf.cmake
